# ArgusMind

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  INSTALL.md  README.md  TOOLS_INSTALL.md  build.sh  config.yaml.example  docker-compose.yml  install.ps1  install.sh  install_deps.ps1  install_tools.ps1  pyproject.toml  requirements.txt  start.ps1  tag.sh  uninstall.sh
.github/workflows/: docker-publish.yml  test.yml
data/: .gitignore
docker/: entrypoint.sh
errors/: template.md
frontend/src/: app.tsx
scripts/: update-frontend-submodule.sh
skills/security-audit/: SKILL.md
src/: __init__.py  config.py  globals.py  logg.py  main.py  tmp_dir.py
src/agents/: __init__.py  base.py  brain.py  chain_analyzer.py  chain_confirmer.py  context.py  plan.py  project_info.py  registry.py  sink_finder.py  tool_output_limit.py
src/analyzers/: __init__.py  ast_enricher.py  constants.py  risk_scorer.py
src/api/: __init__.py  app.py  deps.py  exceptions.py  lifespan.py  middleware.py  security.py
src/core/: __init__.py  code_agent_run_registry.py  context.py  enums.py  event_bus.py  event_handlers.py  event_span.py  events.py  orchestrator.py  policies.py  state_machine.py  task_control.py
src/knowledge/: __init__.py  audit_prompts.py  audit_scoring.py  language_audit_rules.py  owasp_mapping.py  vuln_scoring.py
src/llm/: __init__.py  client.py  parser.py
src/repositories/: __init__.py  event_repository.py  log_repository.py  opencode_event_repository.py  project_repository.py  stats_repository.py  (+2 more)
(+154 files in other folders)
